--- a/etc/bodhibuilder.conf
+++ b/etc/bodhibuilder.conf
@@ -65,3 +65,8 @@ DISTLOCALE=""
 
 # Choose the distribution name you want to show up in GRUB
 DISTNAME="Bodhi Linux"
+
+# Custom repositories
+# If you want any additional repositories add them to the file mentioned below
+# Don't change the following line, it is here for logging and informational purposes only
+CUSTOM_REPOS=`cat /etc/bodhibuilder/apt/custom_repos`
