Correct config file in bodhibuilder-gtk.py.  Some config file comments added.  Add code for check of CUSTOM_REPOS in BB script & file-firstboot to make sure custom repos are in the ISO & final installed system (so now if CUSTOM_REPOS gets mucked up in the config file, the BB script will double check it. CUSTOM_REPOS is only in the config file so that it is easier for the user to find where their custom repositories should go).  File ubiquity.desktop using 'sudo ubiquity gtk-ui'.  No need for deb files in 32-bit OS for offline install.  Add package libefiboot1 to 64-bit deb files.  Change 'cdrom:' repo to 'file:' in sources.list so we can add trusted=yes for offline UEFI installs.  Cleaned up some old comments.  I'm sure some other changes I didn't annotate or don't remember.  Version update to 2.18.2

--- a/etc/bodhibuilder.conf
+++ b/etc/bodhibuilder.conf
@@ -21,6 +21,7 @@ LIVEUSER="bodhi"
 
 
 # Here you can change the name of the livecd/dvd label
+# This will be in the ubiquity icon label on the ISO
 LIVECDLABEL="Bodhi Linux"
 
 
@@ -64,9 +65,11 @@ DISTLOCALE=""
 
 
 # Choose the distribution name you want to show up in GRUB
+# This will also be the DISTRIB_DESCRIPTION in /etc/lsb-release
 DISTNAME="Bodhi Linux"
 
 # Custom repositories
 # If you want any additional repositories add them to the file mentioned below
 # Don't change the following line, it is here for logging and informational purposes only
 CUSTOM_REPOS=`cat /etc/bodhibuilder/apt/custom_repos`
+##### ^^^ Do not change the above line ^^^ #####
