--- a/etc/bodhibuilder/ubiquity/ubiquity.desktop
+++ b/etc/bodhibuilder/ubiquity/ubiquity.desktop
@@ -68,8 +68,8 @@ Exec=sudo ubiquity gtk_ui
 Icon=/usr/share/icons/bbinstall.png
 Terminal=false
 Categories=GTK;System;Settings;
-NotShowIn=KDE;
-NoDisplay=false
 StartupNotify=true
 #X-Ubuntu-Gettext-Domain=ubiquity-desktop
 X-Ayatana-Appmenu-Show-Stubs=False
+NoDisplay=false
+Hidden=false
