--- a/etc/bodhibuilder/uefi/boot/grub/grub.cfg
+++ b/etc/bodhibuilder/uefi/boot/grub/grub.cfg
@@ -13,7 +13,7 @@ set menu_color_highlight=black/light-gray
 set_background_image "/isolinux/splash.png"
 set timeout=7
 
-menuentry "UEFI Boot __DISTNAME__ Live Disc" {
+menuentry "UEFI Boot the __DISTNAME__ Desktop" {
   set gfxpayload=keep
   #~ linux /casper/vmlinuz.efi  file=/cdrom/preseed/ubuntu.seed boot=casper quiet splash --
   #~ linux /casper/vmlinuz.efi  file=/cdrom/preseed/custom.seed boot=casper quiet splash --
