--- a/etc/bodhibuilder.conf
+++ b/etc/bodhibuilder.conf
@@ -26,6 +26,9 @@ LIVECDLABEL="Bodhi Linux"
 
 
 # Here you can change the name of the ISO file that is created
+#  I don't recommend spaces in this var due to it being used in a path location
+#  If you desire spaces or other characters, some form of REGEX formatting
+#  may work you'll have to test it out
 CUSTOMISO="bodhibuilder.iso"
 
 
@@ -67,9 +70,3 @@ DISTLOCALE=""
 # Choose the distribution name you want to show up in GRUB
 # This will also be the DISTRIB_DESCRIPTION in /etc/lsb-release
 DISTNAME="Bodhi Linux"
-
-# Custom repositories
-# If you want any additional repositories add them to the file mentioned below
-# Don't change the following line, it is here for logging and informational purposes only
-CUSTOM_REPOS=`cat /etc/bodhibuilder/apt/custom_repos`
-##### ^^^ Do not change the above line ^^^ #####
