--- a/etc/bodhibuilder/uefi/boot/grub/grub.cfg
+++ b/etc/bodhibuilder/uefi/boot/grub/grub.cfg
@@ -9,34 +9,28 @@ fi
 
 set default="0"
 set menu_color_normal=white/black
-set menu_color_highlight=black/light-gray
+#~ set menu_color_highlight=black/light-gray
+set menu_color_highlight=green/black
 set_background_image "/isolinux/splash.png"
 set timeout=7
 
 menuentry "UEFI Boot the __DISTNAME__ Desktop" {
   set gfxpayload=keep
-  #~ linux /casper/vmlinuz.efi  file=/cdrom/preseed/ubuntu.seed boot=casper quiet splash --
-  #~ linux /casper/vmlinuz.efi  file=/cdrom/preseed/custom.seed boot=casper quiet splash --
-  linux /casper/vmlinuz  file=/cdrom/preseed/custom.seed boot=casper quiet splash --
+  linux /casper/vmlinuz  noprompt file=/cdrom/preseed/custom.seed boot=casper quiet splash --
   initrd  /casper/initrd.lz
 }
 menuentry "UEFI Direct install __DISTNAME__" {
 	set gfxpayload=keep
-	#~ linux	/casper/vmlinuz.efi  file=/cdrom/preseed/lubuntu.seed boot=casper only-ubiquity quiet splash ---
-	#~ linux	/casper/vmlinuz.efi  file=/cdrom/preseed/custom.seed boot=casper only-ubiquity quiet splash ---
-	linux	/casper/vmlinuz  file=/cdrom/preseed/custom.seed boot=casper only-ubiquity quiet splash ---
+	linux	/casper/vmlinuz  noprompt file=/cdrom/preseed/custom.seed boot=casper only-ubiquity quiet splash ---
 	initrd	/casper/initrd.lz
 }
 menuentry "OEM install __DISTNAME__ (for manufacturers)" {
 	set gfxpayload=keep
-	#~ linux	/casper/vmlinuz.efi  file=/cdrom/preseed/lubuntu.seed boot=casper only-ubiquity quiet splash oem-config/enable=true ---
-	#~ linux	/casper/vmlinuz.efi  file=/cdrom/preseed/custom.seed boot=casper only-ubiquity quiet splash oem-config/enable=true ---
-	linux	/casper/vmlinuz  file=/cdrom/preseed/custom.seed boot=casper only-ubiquity quiet splash oem-config/enable=true ---
+	linux	/casper/vmlinuz  noprompt file=/cdrom/preseed/custom.seed boot=casper only-ubiquity quiet splash oem-config/enable=true ---
 	initrd	/casper/initrd.lz
 }
 menuentry "Check disc for defects" {
   set gfxpayload=keep
-  #~ linux /casper/vmlinuz.efi  boot=casper integrity-check quiet splash --
   linux /casper/vmlinuz  boot=casper integrity-check quiet splash --
   initrd  /casper/initrd.lz
 }
