--- a/etc/bodhibuilder.conf
+++ b/etc/bodhibuilder.conf
@@ -17,6 +17,11 @@ EXCLUDES=""
 
 
 # Here you can change the livecd/dvd username
+#  In a 'dist' spin, this will be both the username and password.
+#  In a 'backup' spin AND if lightdm autologin is enabled:
+#  this will be the first attempted username for autlogin, if
+#  this username is not found the currently logged-in username
+#  will be used for autologin.
 LIVEUSER="bodhi"
 
 
